[package]
name = "ess-admin"
version = "0.1.0"
authors = ["Kamran Amini <kam.cpp@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
hyper = "0.13.7"
hyper-timeout = "0.3.1"
hyper-tls = "0.4.3"
native-tls = "0.2.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = '0.2.22', features = ['full']}
